test/testcases/malgo/error/StringPatIsNotSupported.mlg
module {..} = import "../../../../runtime/malgo/Builtin.mlg"
module {..} = import "../../../../runtime/malgo/Prelude.mlg"

def isHoge = {
  "hoge" -> True,
  _ -> False
}

def main = {
  if (isHoge "hoge") { putStrLn "OK" } { putStrLn "Err" }
}
